Add jvm-opt for jvmti